samples/_failures_safe/1761439644_d9ba40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f119efeb.c: In function ‘generate_summary’:
./samples/SAFE/__tmp_f119efeb.c:134:9: error: expected expression at end of input
  134 |         for (
      |         ^~~
./samples/SAFE/__tmp_f119efeb.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f119efeb.c:134:9: error: expected declaration or statement at end of input
